; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/omap/extr_dispc.c_omap_dispc_set_digit_size.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/omap/extr_dispc.c_omap_dispc_set_digit_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DISPC_SIZE_DIG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @omap_dispc_set_digit_size(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = icmp sgt i32 %5, 2048
  br i1 %6, label %10, label %7

7:                                                ; preds = %2
  %8 = load i32, i32* %4, align 4
  %9 = icmp sgt i32 %8, 2048
  br label %10

10:                                               ; preds = %7, %2
  %11 = phi i1 [ true, %2 ], [ %9, %7 ]
  %12 = zext i1 %11 to i32
  %13 = call i32 @BUG_ON(i32 %12)
  %14 = call i32 @enable_lcd_clocks(i32 1)
  %15 = load i32, i32* @DISPC_SIZE_DIG, align 4
  %16 = call i32 @FLD_MASK(i32 16, i32 11)
  %17 = call i32 @FLD_MASK(i32 0, i32 11)
  %18 = or i32 %16, %17
  %19 = load i32, i32* %4, align 4
  %20 = sub nsw i32 %19, 1
  %21 = shl i32 %20, 16
  %22 = load i32, i32* %3, align 4
  %23 = sub nsw i32 %22, 1
  %24 = or i32 %21, %23
  %25 = call i32 @MOD_REG_FLD(i32 %15, i32 %18, i32 %24)
  %26 = call i32 @enable_lcd_clocks(i32 0)
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @enable_lcd_clocks(i32) #1

declare dso_local i32 @MOD_REG_FLD(i32, i32, i32) #1

declare dso_local i32 @FLD_MASK(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
